# quetzal

./: .gitignore  LICENSE  README.md  pyproject.toml  quetzal.toml  run-benchmark.sh
.github/workflows/: ci.yml  release.yml
docs/: design.md  kickoff-prompt.md
quetzal/: __init__.py  __main__.py  cli.py  config.py  docs_check.py  init_cmd.py  main.py  models.py  report.py  score.py
quetzal/agents/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  opencode.py  registry.py
quetzal/core/: runner.py  storage.py
quetzal/datasets/: __init__.py  services.py  store.py
quetzal/judge/: claude_judge.py  prompt.py  registry.py
quetzal/ui/: __init__.py  __main__.py  app.py  history.py
quetzal/ui/static/: app.js  index.html  styles.css
suites/: quetzal.json
